# swagger-output.json
@@ -5,7 +5,7 @@
     "title": "My API",
     "description": "Documentation automatically generated by the <b>swagger-autogen</b> module."
   },
-  "host": "localhost:9527",
+  "host": "localhost:3000",
   "basePath": "/",
   "tags": [
     {
@@ -32,7 +32,7 @@
     "application/json"
   ],
   "paths": {
-    "/": {
+    "/pingpong": {
       "get": {
         "tags": [],
         "description": "",
@@ -45,10 +45,11 @@
         "tags": [
           "User"
         ],
-        "description": "Endpoint to sign in a specific user",
+        "summary": "Endpoint to sign in a specific user",
+        "description": "",
         "parameters": [
           {
-            "name": "obj",
+            "name": "payload",
             "in": "body",
             "description": "User information.",
             "required": true,
@@ -80,12 +81,20 @@
         "tags": [
           "User"
         ],
-        "description": "Endpoint to get a specific user.",
+        "summary": "Endpoint to get a specific user.",
+        "description": "",
         "parameters": [
           {
             "name": "id",
             "in": "path",
             "required": true,
+            "type": "string"
+          },
+          {
+            "name": "condition",
+            "in": "query",
+            "description": "",
+            "required": false,
             "type": "string"
           }
         ],
